# data-cbs-interview

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
config/: ingest.yaml  load.yaml  transform.yaml
docker/: Dockerfile  entrypoint.sh
src/ingest/: main.py  test_api.py
src/load/: main.py  test_connection.py
src/monitoring/: logger.py  metrics.py
src/transform/: main.py
src/utils/: config_loader.py  get_parameter.py
